--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,5 @@
 name: publish
+permissions: write-all
 on: [push]
 jobs:
   publish-python3-docker-image:
@@ -10,7 +11,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_TOKEN }}
       - name: Build the python3 Docker image
         run: |
               docker build . --tag ghcr.io/rafaelperazzo/python3:latest
