--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ sentry-sdk[flask]
 flask-login
 logtail-python
 Flask-SQLAlchemy
-Flask-Limiter
+Flask-Limiter[redis]
 Flask-Session
 flask-talisman
 loguru
